Improvements to lookup form:
- Simplify javascript for descriptor lookup by making the /details API more capable.
- Implement a spinner that will work with that simplified code.
